--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ customElements.define(&#39;my-element&#39;, MyElement);
     
       <google-codelab-step label="Pre-style unregistered elements" duration="0">
         <h3>Use the selector</h3>
-  Use <code>app-drawer:not(:defined)</code> to style your component before its definition.  
+  Use <code>my-element:not(:defined)</code> to style your component before its definition.  
 
       </google-codelab-step>
     
