--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ my-element:defined {
 }
 
 </code></pre>
-  
+  Once you proved this, remove the style tag.  
 
       </google-codelab-step>
     
